feat: split into Stocks and Others Lists
